--- a/ChatBluetooth/app/src/main/AndroidManifest.xml
+++ b/ChatBluetooth/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".activities.ChatListActivity"/>
         <activity android:name=".activities.ChatActivity"/>
+        <activity android:name=".activities.PopUpActivity"
+            android:theme="@style/AppTheme.Popup"/>
     </application>
 
 </manifest>
